# axum-api-template

./: Cargo.toml
.sqlx/: query-29a9936a19c7df1cf6b44f8813a7efb7e89ae718c99b1861e4c998ecc6e93586.json  query-4c61c16c3fb1120fee0c713ad411e021e31d1858d2ce6994dfa1f542cbf945d0.json  query-b97596ef95cf8bd130be6bf979f3d97fcf78c1bc37c2ee5efb27f0c8fca39286.json  query-f5ed3acfc4492fab6e55aa04d0d803ff885def867b1eb239d86a1fe2972f18d2.json
configurations/: local.yaml  production.yaml
migrations/: 20240810004717_db_init.sql
src/: app_state.rs  configurations.rs  db.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/features/auth/: controller.rs  mod.rs  models.rs  repository.rs
src/features/auth/domain/: credentials.rs  mod.rs
src/features/health_check/: controller.rs
src/utils/: jwt.rs  mod.rs  password_hasher.rs  randomizer.rs
tests/api/: health_check.rs  helpers.rs  main.rs
tests/api/auth/: login.rs
